# DoLaMod

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: demo.py
src/dolamod/: demo.py
src/dolamod/data/trained_models/: encoder_category  encoder_category.pickle  encoder_type  encoder_type.pickle  mod_org_cat_9  mod_org_type_9
src/dolamod/data/training/: .~lock.ml_data.csv#  class_diagram_nouns.csv  ml_data.csv
src/dolamod/ml/: aggregated_results.csv  attribute_datatype_test_data.csv  concept_prediction.py  concept_prediction_qualifier.py  concept_prediction_transformers.py  concept_prediction_updated.py  concepts_prediction.py  concepts_prediction2.py  quality_training_data.csv  results.csv  test_attributes_types.py
src/dolamod/rules_nlp/: concepts_extractor.py  relationships_extractor.py
