[tool.poetry]
name = "dolamod"
description = "Tool to Support Domain Modelling using Language Modelling"
version = "0.1.0"
authors = ["Rijul Saini <rijul.saini@aero.bombardier.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
en_core_web_lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1.tar.gz"}
pandas = "^2.2.1"
word2number = "^1.1"
pre-commit = "^3.7.0"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
gensim = "^4.3.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
